# pybites

./: .flake8  .isort.cfg  pyproject.toml
101/: driving.py  test_driving.py
102/: colors.py  test_colors.py
103/: test_winners.py  winners.py
104/: pipe.py
105/: slicing.py  test_slicing.py
106/: git.txt  test_vowels.py  vowels.py
107/: git.txt  list_comprehensions.py  test_list_comprehensions.py
108/: belts.py  git.txt  test_belts.py
109/: git.txt  test_workouts.py  workouts.py
110/: division.py  git.txt  test_division.py
130/: cars.py  git.txt  test_cars.py
18/: git.txt  harry.py  test_harry.py
188/: git.txt  stats.py  test_stats.py
239/: git.txt  test_fizzbuzz.py
241/: bite.html  git.txt  numbers_to_dec.py  test_numbers_to_dec.py
4/: git.txt  tags.py  test_tags.py
