[tool.poetry]
name = "bitesofpy"
version = "0.1.0"
description = ""
authors = ["Will Frey <jfrey89@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.1"
flake8-import-order = "^0.18.1"
pandas = "^0.25.3"
jupyter = "^1.0.0"
black = "^19.10b0"
isort = "^4.3.21"
flake8 = "^3.7.9"
flake8-bugbear = "^19.8.0"
pep8-naming = "^0.9.1"
docformatter = "^1.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
